// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculateCostV1 > fixture: box perimeter 300x50, internal pitched roof, same geometry 1`] = `
{
  "cost_ex_gst": 12425.13,
  "cost_inc_gst": 14288.9,
  "notes_and_warnings": [
    "Acrylic joiner system assumed (no through-fixing).",
  ],
  "warnings": [
    {
      "level": "info",
      "message": "Acrylic joiner system assumed (no through-fixing).",
    },
  ],
}
`;

exports[`calculateCostV1 > fixture: pitched, acrylic, 6m × 3m, black, soffit + deck posts, 2.4m 1`] = `
{
  "cost_ex_gst": 10838.02,
  "cost_inc_gst": 12463.72,
  "notes_and_warnings": [
    "Acrylic joiner system assumed (no through-fixing).",
  ],
  "warnings": [
    {
      "level": "info",
      "message": "Acrylic joiner system assumed (no through-fixing).",
    },
  ],
}
`;
